--- a/www/index.html
+++ b/www/index.html
@@ -6,8 +6,8 @@
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'/>
     <link href='mapbox-gl.css' rel='stylesheet'/>
     <script type="text/javascript" src="cordova.js"></script>
-    <!--script src='http://192.168.253.80:8080/www/mapbox-gl-cordova-mbtiles.js'></script-->
-    <script src='mapbox-gl-cordova-mbtiles.js'></script>
+    <script src='http://192.168.10.169:8080/www/mapbox-gl-cordova-mbtiles.js'></script>
+    <!--script src='mapbox-gl-cordova-mbtiles.js'></script-->
     <style>
         body {
             margin: 0;
@@ -55,7 +55,10 @@
     }
 
     function init() {
-        readJSON('data/empty.json').then(function (empty) {
+      const offline = 1;
+      if (offline) {
+        readJSON('data/osm-bright.json').then(function (empty) {
+            mapboxgl.accessToken = 'RiS4gsgZPZqeeMlIyxFo';
             var map = new mapboxgl.Map({
                 container: 'map',
                 style: empty,
@@ -78,21 +81,32 @@
                     });
 
                     // Apply style rules from klokantech-basic
-                    readJSON('data/klokantech-basic.json').then(function (style) {
+                    /*
+                    readJSON('data/osm-bright.json').then(function (style) {
                         style.layers.map(function (layer) {
                             map.addLayer(layer);
                         });
                     });
+                    */
                 });
             });
         });
+      } else {
+        var map = new mapboxgl.Map({
+          container: 'map',
+          style: 'data/osm-bright.json',
+          attributionControl: true,
+          hash: true
+        });
+        map.addControl(new mapboxgl.NavigationControl());
+      }
     }
 
 </script>
 
 <!-- Code needed by live-server -->
 <script type="text/javascript">
-	var IP_ADDRESS_AND_PORT = "192.168.253.80:8080";
+	var IP_ADDRESS_AND_PORT = "192.168.10.169:8080";
 	if ('WebSocket' in window) {
 		(function() {
 			function refreshCSS() {
