--- a/www/index.html
+++ b/www/index.html
@@ -6,8 +6,8 @@
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'/>
     <link href='mapbox-gl.css' rel='stylesheet'/>
     <script type="text/javascript" src="cordova.js"></script>
-    <script src='http://192.168.10.169:8080/www/mapbox-gl-cordova-mbtiles.js'></script>
-    <!--script src='mapbox-gl-cordova-mbtiles.js'></script-->
+    <!--script src='http://192.168.10.159:8080/www/mapbox-gl-cordova-mbtiles.js'></script-->
+    <script src='mapbox-gl-cordova-mbtiles.js'></script>
     <style>
         body {
             margin: 0;
@@ -57,7 +57,7 @@
     function init() {
       const offline = 1;
       if (offline) {
-        readJSON('data/osm-bright.json').then(function (empty) {
+        readJSON('data/empty.json').then(function (empty) {
             mapboxgl.accessToken = 'RiS4gsgZPZqeeMlIyxFo';
             var map = new mapboxgl.Map({
                 container: 'map',
@@ -81,13 +81,11 @@
                     });
 
                     // Apply style rules from klokantech-basic
-                    /*
                     readJSON('data/osm-bright.json').then(function (style) {
                         style.layers.map(function (layer) {
                             map.addLayer(layer);
                         });
                     });
-                    */
                 });
             });
         });
@@ -106,7 +104,7 @@
 
 <!-- Code needed by live-server -->
 <script type="text/javascript">
-	var IP_ADDRESS_AND_PORT = "192.168.10.169:8080";
+	var IP_ADDRESS_AND_PORT = "192.168.10.159:8080";
 	if ('WebSocket' in window) {
 		(function() {
 			function refreshCSS() {
